wypisywanie nazwy w logach
