# server/server.js
@@ -23,7 +23,6 @@ const io = require('socket.io')(server, {
 
 io.on('connection', (socket) => {
   socket.on('disconnect', () => {
-    console.log('User disconnected');
   });
 });
 
@@ -1165,7 +1164,7 @@ app.post('/newEmail', (req, res) => {
 app.get('/logi/:projectId', verifyAccessToken, (req, res) => {
   const { projectId } = req.params;
 
-  const querry = "SELECT l.*, u.imie, u.nazwisko FROM logi l JOIN zadania z ON l.zadanie_id = z.zadanie_id JOIN projekty p ON z.projekt_id = p.projekt_id JOIN uzytkownik u ON l.uzytkownik_id = u.uzytkownik_id WHERE p.projekt_id = ? ORDER BY l.log_id DESC LIMIT 10;";
+  const querry = "SELECT l.*, z.tytul, u.imie, u.nazwisko FROM logi l JOIN zadania z ON l.zadanie_id = z.zadanie_id JOIN projekty p ON z.projekt_id = p.projekt_id JOIN uzytkownik u ON l.uzytkownik_id = u.uzytkownik_id WHERE p.projekt_id = ? ORDER BY l.log_id DESC LIMIT 10;";
   db.query(querry, [projectId], (error, results) => {
     if (error) {
       console.error('Błąd pobierania logów', error);
@@ -1174,6 +1173,7 @@ app.get('/logi/:projectId', verifyAccessToken, (req, res) => {
       const logi = results.map((row) => ({
         log_id: row.log_id,
         status: row.status,
+        tytul: row.tytul,
         czas_rozpoczecia: row.czas_rozpoczecia,
         czas_zakonczenia: row.czas_zakonczenia,
         zadanie_id: row.zadanie_id,
